# bincode

./: Cargo.toml  search-index.js
bincode/: enum.SizeLimit.html  index.html  struct.RefBox.html  struct.SliceBox.html  struct.StrBox.html
bincode/rustc_serialize/: enum.DecodingError.html  enum.EncodingError.html  fn.decode.html  fn.decode_from.html  fn.encode.html  fn.encode_into.html  fn.encoded_size.html  fn.encoded_size_bounded.html  index.html  struct.DecoderReader.html  struct.EncoderWriter.html  struct.InvalidEncoding.html  struct.SizeChecker.html  type.DecodingResult.html  type.EncodingResult.html
bincode/serde/: enum.DeserializeError.html  enum.SerializeError.html  fn.deserialize.html  fn.deserialize_from.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  fn.serialized_size_bounded.html  index.html  struct.Deserializer.html  struct.InvalidEncoding.html  struct.Serializer.html  type.DeserializeResult.html  type.SerializeResult.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
src/: lib.rs  refbox.rs
src/bincode/src/: lib.rs.html  (+1 more)
src/byteorder/: lib.rs.html  new.rs.html
src/num_traits/: bounds.rs.html  cast.rs.html  float.rs.html  identities.rs.html  int.rs.html  lib.rs.html  pow.rs.html  sign.rs.html
src/rustc_serialize/: base64.rs.html  collection_impls.rs.html  hex.rs.html  json.rs.html  lib.rs.html  serialize.rs.html
src/serde/: bytes.rs.html  iter.rs.html  lib.rs.html  macros.rs.html  mod.rs  reader.rs  utils.rs.html  writer.rs
(+33 files in other folders)
