[package]
name = "bincode_core"
version = "0.6.0"
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>"]
repository = "https://github.com/TyOverby/bincode"
documentation = "http://tyoverby.github.io/bincode/bincode/"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
license = "MIT"
description = "A binary serialization / deserialization strategy and implementation for serde."

[lib]
name = "bincode"

[dependencies]
byteorder_core_io = { version = "0.5", default-features = false }
serde = { version = "0.8.*", default-features = false }
#serde_derive = "0.8.*"
core_io = { version = "*" }

[features]
default = ['std', 'collections']
std = ['serde/std']
collections = ['serde/collections']
